bynkc/tests/fixtures/negative/280_transition_impure_predicate/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String
  store count: Cell[Int] = 0

  transition bad: new.count >= old.count && Val[Bool]

  on call bump() -> Effect[()] {
    count := count + 1
    Effect.pure(())
  }
}